--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/jramosss/Discord-Bot#readme",
   "dependencies": {
+    "arya-ytpl": "^0.1.23",
+    "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
@@ -24,7 +26,10 @@
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
     "youtube-dl": "^3.0.2",
+    "youtube-playlist": "^1.0.4",
     "youtube-search": "^1.1.4",
+    "youtube-search-api": "^1.0.8",
+    "yt-playlist-scraper": "^1.0.4",
     "ytdl-core": "github:fent/node-ytdl-core"
   }
 }
