--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-  "name": "discordbot",
+  "name": "juakoto",
   "version": "1.0.0",
-  "description": "Puede servir para trollear",
-  "main": "index.js",
+  "description": "#### Juakoto es un bot de discord capaz de realizar varias acciones utiles, la mayoria relacionadas con la musica",
+  "main": "src/index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "test": "ts"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jramosss/Discord-Bot.git"
+    "url": "git+https://github.com/jramosss/juakoto.git"
   },
-  "author": "Shuls",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jramosss/Discord-Bot/issues"
+    "url": "https://github.com/jramosss/juakoto/issues"
   },
-  "homepage": "https://github.com/jramosss/Discord-Bot#readme",
+  "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
-    "arya-ytpl": "^0.1.23",
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.1",
-    "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
-    "ms": "^2.1.3",
-    "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
-    "youtube-dl": "^3.0.2",
-    "youtube-playlist": "^1.0.4",
-    "youtube-search": "^1.1.4",
-    "youtube-search-api": "^1.0.8",
-    "yt-playlist-scraper": "^1.0.4",
-    "ytdl-core": "github:fent/node-ytdl-core"
+    "ytdl-core": "^4.4.4"
   }
 }
