--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "youtube-search": "^1.1.4",
     "youtube-search-api": "^1.0.8",
     "yt-playlist-scraper": "^1.0.4",
-    "ytdl-core": "github:fent/node-ytdl-core"
+    "ytdl-core": "^4.4.4"
   }
 }
