--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/jramosss/Discord-Bot#readme",
   "dependencies": {
     "arya-ytpl": "^0.1.23",
+    "dependencies": "^0.0.1",
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
@@ -28,9 +29,10 @@
     "ms": "^2.1.3",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
+    "ws": "^7.4.1",
     "youtube-dl": "^3.0.2",
     "youtube-playlist": "^1.0.4",
-    "youtube-search": "^1.1.4",
+    "youtube-search": "^1.1.2",
     "youtube-search-api": "^1.0.8",
     "yt-playlist-scraper": "^1.0.4",
     "ytdl-core": "^4.4.4"
