--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ms": "^2.1.3",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
+    "spotify-url-info": "^2.2.0",
     "ws": "^7.4.1",
     "youtube-dl": "^3.0.2",
     "youtube-playlist": "^1.0.4",
