--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "discordbot",
-  "version": "1.0.0",
-  "engines": {
-    "node": "14.x"
+  "name": "juakoto",
+  "version": "1.7.0",
+  "description": "#### Juakoto es un bot de discord capaz de realizar varias acciones utiles, la mayoria relacionadas con la musica",
+  "main": "src/index.js",
+  "directories": {
+    "test": "tests"
   },
-  "description": "Puede servir para trollear",
-  "main": "index.js",
   "scripts": {
-    "test": "ts"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jramosss/Discord-Bot.git"
+    "url": "git+https://github.com/jramosss/juakoto.git"
   },
-  "author": "Shuls",
+  "author": "Chuls",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jramosss/Discord-Bot/issues"
+    "url": "https://github.com/jramosss/juakoto/issues"
   },
-  "homepage": "https://github.com/jramosss/Discord-Bot#readme",
+  "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
     "arya-ytpl": "^0.1.23",
     "dependencies": "^0.0.1",
@@ -29,13 +29,15 @@
     "ms": "^2.1.3",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
+    "spotify-info.js": "^1.0.4",
     "spotify-url-info": "^2.2.0",
-    "ws": "^7.4.1",
+    "ws": "^7.4.2",
     "youtube-dl": "^3.0.2",
     "youtube-playlist": "^1.0.4",
     "youtube-search": "^1.1.2",
     "youtube-search-api": "^1.0.8",
     "yt-playlist-scraper": "^1.0.4",
-    "ytdl-core": "^4.4.4"
+    "yt-search": "^2.5.2",
+    "ytdl-core": "^4.4.5"
   }
 }
