--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "ms": "^2.1.3",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
+    "sequelize": "^6.5.0",
     "spotify-info.js": "^1.0.4",
     "spotify-url-info": "^2.2.0",
+    "sqlite3": "^5.0.1",
     "ws": "^7.4.2",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.4.5"
