--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
     "arya-ytpl": "^0.1.23",
+    "colors": "^1.4.0",
     "dependencies": "^0.0.1",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
     "ms": "^2.1.3",
+    "node-console-colors": "^1.1.4",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
     "sequelize": "^6.5.0",
@@ -34,6 +36,6 @@
     "sqlite3": "^5.0.1",
     "ws": "^7.4.6",
     "yt-search": "^2.5.2",
-    "ytdl-core": "^4.5.0"
+    "ytdl-core": "^4.8.3"
   }
 }
