--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "juakoto",
   "version": "1.7.0",
-  "description": "#### Juakoto es un bot de discord capaz de realizar varias acciones utiles, la mayoria relacionadas con la musica",
+  "description": "Juakoto es un bot de discord capaz de realizar varias acciones utiles, la mayoria relacionadas con la musica",
   "main": "src/index.js",
+  "type": "module",
   "directories": {
     "test": "tests"
   },
@@ -24,6 +25,7 @@
     "colors": "^1.4.0",
     "dependencies": "^0.0.1",
     "discord.js": "^12.5.1",
+    "dotenv": "^10.0.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
     "ms": "^2.1.3",
@@ -35,7 +37,7 @@
     "spotify-url-info": "^2.2.0",
     "sqlite3": "^5.0.1",
     "ws": "^7.4.6",
-    "yt-search": "^2.5.2",
+    "yt-search": "^2.10.1",
     "ytdl-core": "^4.8.3"
   }
 }
