--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.7.0",
   "description": "Juakoto es un bot de discord capaz de realizar varias acciones utiles, la mayoria relacionadas con la musica",
   "main": "src/index.js",
-  "type": "module",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "node test.js"
+    "build": "tsc",
+    "lint": "eslint --fix src/**/*.ts",
+    "start": "node dist/index.js",
+    "dev": "NODE_ENV=development ts-node-dev --respawn index.ts"
   },
   "repository": {
     "type": "git",
@@ -35,9 +37,16 @@
     "sequelize": "^6.5.0",
     "spotify-info.js": "^1.0.4",
     "spotify-url-info": "^2.2.0",
+    "spotify-web-api-node": "^5.0.2",
     "sqlite3": "^5.0.1",
     "ws": "^7.4.6",
     "yt-search": "^2.10.1",
     "ytdl-core": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^16.9.1",
+    "ts-node": "^10.2.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
   }
 }
