--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "bugs": {
     "url": "https://github.com/jramosss/juakoto/issues"
   },
+  "engines": {
+    "node": "12.20.1"
+  },
   "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
     "arya-ytpl": "^0.1.23",
