--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "url": "https://github.com/jramosss/juakoto/issues"
   },
   "engines": {
-    "node": "12.20.1"
+    "node": "12.20.1",
+    "npm" : "7.19.1"
   },
   "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
