--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "juakoto",
   "version": "1.7.0",
   "description": "Juakoto es un bot de discord capaz de realizar varias acciones utiles, la mayoria relacionadas con la musica",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "ts-node index.ts",
     "lint": "eslint --fix src/**/*.ts",
-    "start": "node dist/index.js",
+    "start": "ts-node index.ts",
     "dev": "NODE_ENV=development ts-node-dev --respawn index.ts"
   },
   "repository": {
@@ -22,28 +22,17 @@
     "url": "https://github.com/jramosss/juakoto/issues"
   },
   "engines": {
-    "node": "12.20.1",
-    "npm" : "7.19.1"
+    "node": "16.13.1",
+    "npm": "8.1.2"
   },
   "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
-    "arya-ytpl": "^0.1.23",
-    "colors": "^1.4.0",
     "dependencies": "^0.0.1",
-    "discord.js": "^12.5.1",
+    "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
-    "ms": "^2.1.3",
-    "node-console-colors": "^1.1.4",
-    "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
-    "sequelize": "^6.5.0",
-    "spotify-info.js": "^1.0.4",
-    "spotify-url-info": "^2.2.0",
-    "spotify-web-api-node": "^5.0.2",
-    "sqlite3": "^5.0.1",
-    "ws": "^7.4.6",
     "yt-search": "^2.10.1",
     "ytdl-core": "^4.8.3"
   },
