--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
+    "@discordjs/voice": "^0.7.5",
     "dependencies": "^0.0.1",
     "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
@@ -41,5 +42,6 @@
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
-  }
+  },
+  "licenses": []
 }
