--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
   "homepage": "https://github.com/jramosss/juakoto#readme",
   "dependencies": {
     "@discordjs/voice": "^0.7.5",
+    "@types/yt-search": "^2.3.2",
     "dependencies": "^0.0.1",
     "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
     "opusscript": "0.0.7",
-    "yt-search": "^2.10.1",
+    "youtube-search": "^1.1.6",
+    "yt-search": "^2.10.3",
     "ytdl-core": "^4.8.3"
   },
   "devDependencies": {
